# just-recipes-blog

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  contributing.md  netlify.toml  readme.md  rust-toolchain.toml
.github/ISSUE_TEMPLATE/: recipe-request.md
.github/workflows/: recipe.yml  rust.yml
recipes/: 00645d458585-baklava.yml  09e4f7fb5e27-sauteed-apples.yml  303c5ed692df-jambalaya.yml  baklava.yml  ce870afeb051-breakfast-bread.yml  e294c5688647-dutch-oven-chicken-tacos.yml
src/: image.rs  lib.rs  main.rs  model.rs  site.rs  template.rs  validate.rs  when.rs
static/: humans.txt  robots.txt  site.webmanifest
templates/: about.hbs  generic_page.hbs  incr.rhai  index.hbs  link_list.hbs  oembed.hbs  recipe.hbs  recipe_link.hbs  recipe_list.hbs  root.hbs  sitemap.hbs
