[package]
name = "jrb"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Defines a feature named `webp` that does not enable any other features.
server = ["tower-http", "axum"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
walkdir = "2"
axum = { version = "0.2", optional = true}
tower-http = { version = "0.1", features = ["fs"], optional = true }
handlebars = { version = "4.1.5", features = ["dir_source"] }
fs_extra = "1.2.0"
structopt = { version = "0.3" }
log = "0.4.14"
fnv = "1.0.3"
slugify = "0.1.0"

[build-dependencies]
built = "0.5"
