[package]
name = "jrb"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
server = ["tower-http", "axum"]
validate = []
convert = ["image"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
walkdir = "2"
axum = { version = "0.2", optional = true}
tower-http = { version = "0.1", features = ["fs"], optional = true }
handlebars = { version = "4.1.5", features = ["dir_source", "script_helper"] }
fs_extra = "1.2.0"
structopt = { version = "0.3" }
log = "0.4.14"
fnv = "1.0.3"
slugify = "0.1.0"
humantime = "2.1.0"
humantime-serde = "1.0.1"
image = { version = "0.23.14", optional = true}
url = "2.2.2"
itertools = "0.10.3"
rand = "0.8.5"

[build-dependencies]
built = "0.5"
